cleaned up code + fixed background issues
as a team we love our large foreheaded member but i personally think theres been too much large forehead-shaming.

--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 body
 {
     background-image: url('https://umaine.edu/news/wp-content/uploads/sites/3/2021/04/Forest-news-feature.jpg');
-    background-size: cover;
+    /*background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: aqua;
+    background-color: aqua*/
     font-family: Arial, sans-serif;
 }
 .main-paragraph
